--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,7 @@
-@import 'leaflet/dist/leaflet.css';
-@import 'leaflet-routing-machine/dist/leaflet-routing-machine.css';
-@import '@/assets/tailwind.css' layer(tailwind);
+@import "leaflet/dist/leaflet.css";
+@import "leaflet-routing-machine/dist/leaflet-routing-machine.css";
+@import "@/assets/fontawesome/css/all.min.css" layer(fontawesome);
+@import "@/assets/tailwind.css" layer(tailwind);
 
 #app {
   display: flex;
